--- a/views/organization/index1.ejs
+++ b/views/organization/index1.ejs
@@ -1,6 +1,5 @@
 <% include ../partials/header2 %>
 
-<div id="cmscontent" class="container">
 
 <div id="topbar">
 	<h1>Organization</h1>
@@ -12,7 +11,7 @@
 		<div class="col-xs-12 col-sm-6">
 			<div class="form-group">
 				<label for="organizationname">Organization Name</label>
-				<input type="text" class="form-control" id="organizationname" name="organizationname" value=""/>
+				<input type="text" class="form-control requiredfield" id="organizationname" name="organizationname" value=""/>
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-6">
@@ -26,9 +25,9 @@
 				<label for="organizationrole">Role</label>
 				<select class="form-control" id="organizationrole" name="organizationrole">
 					<option value="0" selected>Select</option>
-					<option value="1">Role 1</option>
-					<option value="2">Role 2</option>
-					<option value="3">Role 3</option>
+                    <% userRole.enums.forEach(function(enumItem) { %>
+                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+                    <% }); %>
 				</select>
 			</div>
 		</div>
@@ -37,9 +36,9 @@
 				<label for="organizationtype">Type</label>
 				<select class="form-control" id="organizationtype" name="organizationtype">
 					<option value="0" selected>Select</option>
-					<option value="1">Organization Type 1</option>
-					<option value="2">Organization Type 2</option>
-					<option value="3">Organization Type 3</option>
+                    <% organizationType.enums.forEach(function(enumItem) { %>
+                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+                    <% }); %>
 				</select>
 			</div>
 		</div>
@@ -48,8 +47,9 @@
 				<label for="organizationrolestatus">Role Status</label>
 				<select class="form-control" id="organizationrolestatus" name="organizationrolestatus">
 					<option value="0" selected>Select</option>
-					<option value="1">Active</option>
-					<option value="2">Inactive</option>
+                    <% userRoleStatus.enums.forEach(function(enumItem) { %>
+                    <option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+                    <% }); %>
 				</select>
 			</div>
 		</div>
