--- a/views/tasks/index.ejs
+++ b/views/tasks/index.ejs
@@ -1,6 +1,5 @@
 <% include ../partials/header1 %>
 
-<div id="cmscontent" class="container">
 
 <div id="taskfiltersection">
 
@@ -59,8 +58,11 @@
 		<a href="/case" class="btn btn-primary btn-md" id="createcasebtn">Create Case</a>
 		<a href="/person" class="btn btn-primary btn-md createbtn" id="createpersonbtn">Create Person</a>
 		<a href="/organization" class="btn btn-primary btn-md createbtn" id="createorganizationbtn">Create Organization</a>
+		<a href="/questionnaires" class="btn btn-primary btn-md createbtn" id="managequestionnairebtn">Manage Questionnaire</a>
 	</p>
 </div>
+
+<br><br>
 
 		<h4><button id="plustask" class="btn btn-default btn-md plusbtn"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button> Task</h4>
 
@@ -69,7 +71,7 @@
 				<div class="col-xs-6 col-sm-4">
 					<div class="form-group">
 						<label for="tasksubject">Subject</label>
-						<input type="text" class="form-control" id="tasksubject" name="tasksubject" size="90" maxlength="100" value=""/>
+						<input type="text" class="form-control requiredfield" id="tasksubject" name="tasksubject" size="90" maxlength="100" value=""/>
 					</div>
 				</div>
 				<div class="col-xs-6 col-sm-4">
@@ -77,12 +79,9 @@
 						<label for="tasktype">Type</label>
 						<select class="form-control" id="tasktype" name="tasktype">
 							<option value="0" selected>Select</option>
-							<option value="1">Email</option>
-							<option value="2">Call</option>
-							<option value="3">Meeting</option>
-							<option value="4">Referral</option>
-							<option value="5">Research</option>
-							<option value="6">Other</option>
+						<% taskType.enums.forEach(function(enumItem) { %>
+						<option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+						<% }); %>
 						</select>
 					</div>
 				</div>
@@ -91,9 +90,9 @@
 						<label for="taskpriority">Priority</label>
 						<select class="form-control" id="taskpriority" name="taskpriority">
 							<option value="0" selected>Select</option>
-							<option value="1">High</option>
-							<option value="2">Medium</option>
-							<option value="3">Low</option>
+						<% caseCategory.enums.forEach(function(enumItem) { %>
+						<option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+						<% }); %>
 						</select>
 					</div>
 				</div>
@@ -112,7 +111,7 @@
 				<div class="col-xs-6 col-sm-4">
 					<div class="form-group">
 						<label for="taskcompletedate">Complete Date</label>
-						<input type="text" class="form-control" id="taskcompletedate" name="taskcompletedate" value=""/>
+						<input type="text" class="form-control" id="taskcompletedate" name="taskcompletedate" disabled value=""/>
 					</div>
 				</div>
 				<div class="col-xs-6 col-sm-4">
@@ -148,12 +147,9 @@
 						<label for="taskstatus">Status</label>
 						<select class="form-control" id="taskstatus" name="taskstatus">
 							<option value="0" selected>Select</option>
-							<option value="1">Not Started</option>
-							<option value="2">In Progress</option>
-							<option value="3">Pending Input</option>
-							<option value="4">Completed</option>
-							<option value="5">Overdue</option>
-							<option value="6">Canceled</option>
+						<% taskStatus.enums.forEach(function(enumItem) { %>
+						<option value="<%= enumItem.value %>"><%= enumItem.key %></option>
+						<% }); %>
 						</select>
 					</div>
 				</div>
@@ -170,7 +166,39 @@
 			</div>
 		</form>
 
+		<% taskslisting.sort(function(a,b) {
+			return (a.case_id - b.case_id) || (a.task_id - b.task_id);
+		}); %>
 
+	<div class="form-group">
+		<label for="expandtasks" class="btn btn-sm btn-default">
+			<input type="radio" name="showtasks" id="expandtasks" class="expandtasksbtn" checked> Show Tables
+		</label>
+		<label for="collapsetasks" class="btn btn-sm btn-default">
+			<input type="radio" name="showtasks" id="collapsetasks" class="collapsetasksbtn"> Hide Tables
+		</label>
+	</div>
+
+
+	<% for (var i = 0; i < taskslisting.length; i += 1) {
+		var tasktable = "tasktable" + i;
+		var btntasktable = "btntasktable" + i;
+		var tsubject = "tsubject" + i;
+		var ttype = "ttype" + i;
+		var tpriority = "tpriority" + i;
+		var tstart = "tstart" + i;
+		var tdue = "tdue" + i;
+		var tcomplete = "tcomplete" + i;
+		var tpersonid = "tpersonid" + i;
+		var tstatus = "tstatus" + i;
+		var tnote = "tnote" + i;
+		var task = "task" + i;
+		var edittask = "edittask" + i;
+		var removetask = "removetask" + i;
+	%>
+	<% if ((i === 0) || ((i > 0) && (taskslisting[i - 1].case_id !== taskslisting[i].case_id))) { %>
+	<h6><a href="/case/<%= taskslisting[i].case_id %>"><button class="btn btn-default btn-md taskcasebtn"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span></button></a> <button class="btn btn-primary btn-md moretaskbtn" id="<%= btntasktable %>"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button> <%= taskslisting[i].case_title %></h6>
+	<div id="<%= tasktable %>" class="tasktable">
 		<table id="tasksdisplaytable" class="table table-responsive table-striped table-condensed 2rowremovebtntop">
 			<thead>
 				<tr class="info">
@@ -179,38 +207,19 @@
 					<th>Priority</th>
 					<th>Due Date</th>
 					<th>Assigned To</th>
-					<th>Case Title</th>
 					<th>Status</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-			<% taskslisting.sort(function(a,b) {
-			    return (a.id > b.id) ? 1 : ((b.id > a.id) ? -1 : 0);
-			}); %>
-            <% for (var i = 0; i < taskslisting.length; i += 1) {
-				var tsubject = "tsubject" + i;
-				var ttype = "ttype" + i;
-				var tpriority = "tpriority" + i;
-				var tstart = "tstart" + i;
-				var tdue = "tdue" + i;
-				var tcomplete = "tcomplete" + i;
-				var tpersonid = "tpersonid" + i;
-				var tcaseid = "tcaseid" + i;
-				var tstatus = "tstatus" + i;
-				var tnote = "tnote" + i;
-				var task = "task" + i;
-				var edittask = "edittask" + i;
-				var removetask = "removetask" + i;
-			%>
+		<% } %>
 				<tr>
 					<td id="<%= tsubject %>"><%= taskslisting[i].subject %></td>
 					<td id="<%= ttype %>"><%= taskslisting[i].type %></td>
 					<td id="<%= tpriority %>"><%= taskslisting[i].priority %></td>
 					<td id="<%= tdue %>"><%= taskslisting[i].due_date %></td>
 					<td><span hidden id="<%= tpersonid %>"><%= taskslisting[i].person_id %></span><a href="/person/<%= taskslisting[i].person_id %>"><%= taskslisting[i].person_name %></a></td>
-					<td><span hidden id="<%= tcaseid %>"><%= taskslisting[i].case_id %></span><a href="/case/<%= taskslisting[i].case_id %>"><%= taskslisting[i].case_title %></a></td>
-					<td id="<%= tstatus %>"><%= taskslisting[i].status %></td>
+					<td id="<%= tstatus %>"><%= taskslisting[i].task_status %></td>
 					<td class="tablebtns" id="<%= taskslisting[i].task_id %>">
 						<button class="btn btn-primary btn-md tableeditbtn taskeditbtn" id="<%= edittask %>"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
 						<button class="btn btn-default morebtn" type="button" data-toggle="collapse" data-target="#<%= task %>" aria-expanded="false" aria-controls="<%= task %>"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
@@ -218,7 +227,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td colspan="8">						
+					<td colspan="7">						
 						<div class="collapse" id="<%= task %>">
 							<p><strong>Start Date:</strong> <span id="<%= tstart %>"><%= taskslisting[i].start_date %></span> &nbsp;&nbsp; 
 							<strong>Complete Date:</strong> <span id="<%= tcomplete %>"><%= taskslisting[i].complete_date %></span>
@@ -228,32 +237,15 @@
 					</td>
 				</tr>
 		      </tr>
-			<% } %>
+			<% if ((taskslisting.length === 1) || (i === taskslisting.length - 1) || ((i < taskslisting.length) && (taskslisting[i].case_id !== taskslisting[i + 1].case_id))) { %>
 			</tbody>
 		</table>
+		</div>
+        <% } } %>
 
-		<div id="taskspagination" class="paginationdiv">
-			<nav aria-label="Page navigation">
-			  <ul class="pagination">
-			    <li class="disabled">
-			      <a href="#" aria-label="Previous">
-			        <span aria-hidden="true">&laquo;</span>
-			      </a>
-			    </li>
-			    <li class="active"><a href="#">1</a></li>
-			    <li><a href="#">2</a></li>
-			    <li><a href="#">3</a></li>
-			    <li>
-			      <a href="#" aria-label="Next">
-			        <span aria-hidden="true">&raquo;</span>
-			      </a>
-			    </li>
-			  </ul>
-			</nav>
-		</div><!-- taskspagination -->
+<br><br><br>
 
-
-<h6>Overdue Tasks (<span id="overduetasks"><%= overdue_tasks.length %></span>)</h6>
+<h4>Overdue Tasks (<span id="overduetasks"><%= overdue_tasks.length %></span>)</h4>
 
 	<% if (overdue_tasks.length > 0) { %>
 		<table id="overduetaskdisplaytable" class="table table-responsive table-striped table-condensed">
@@ -281,7 +273,7 @@
 					<td><%= overdue_tasks[i].due_date %></td>
 					<td><a href="/person/<%= overdue_tasks[i].person_id %>"><%= overdue_tasks[i].person_id %></a></td>
 					<td><a href="/case/<%= overdue_tasks[i].case_id %>"><%= overdue_tasks[i].case_id %></a></td>
-					<td><%= overdue_tasks[i].status %></td>
+					<td><%= overdue_tasks[i].task_status %></td>
 				</tr>
 			<% } %>
 			</tbody>
@@ -291,5 +283,8 @@
 
 </div><!-- cmscontent container -->
 
+<script>
+$(".tasktable").show();
+</script>
 
 <% include ../partials/footer1 %>
