--- a/views/partials/footer3.ejs
+++ b/views/partials/footer3.ejs
@@ -3,6 +3,7 @@
 	<hr>
 		<div class="buttonrow">
 <p>
+	<button id="goback" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;&nbsp;Back</button>
 	<button id="totop" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>&nbsp;&nbsp;To Top&nbsp;&nbsp;</button>
 </p>
 <p>Copyright &copy; 2016</p>
