--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -15,7 +15,7 @@
 $(function () {
     "use strict";
     $("#casestartdate, #caseduedate, #casecompletedate").datepicker();
-    $("#needdate, #goalstartdate, #goalduedate, #goalcompletedate, #planstartdate, #planduedate, #plancompletedate, #actionstartdate, #actionduedate, #actioncompletedate, #taskstartdate, #taskduedate, #taskcompletedate, #casefiledate, #casenotedate").datepicker();
+    $("#problemstartdate, #problemresolveddate, #needdate, #goalstartdate, #goalduedate, #goalcompletedate, #planstartdate, #planduedate, #plancompletedate, #actionstartdate, #actionduedate, #actioncompletedate, #taskstartdate, #taskduedate, #taskcompletedate, #casefiledate, #casenotedate").datepicker();
 });
 
 </script>
@@ -58,3 +58,14 @@ $(function () {
      	</div>
 	</nav>
 
+<div id="cmscontent" class="container">
+		<% if(error && error.length > 0) { %>
+			<div class="alert alert-danger" role="alert">
+				<%= error %>
+			</div>
+		<% } %>
+		<% if(success && success.length > 0) { %>
+			<div class="alert alert-success" role="alert">
+				<%= success %>
+			</div>
+		<% } %>
